# Akira

data/: meson.build
data/schemas/: meson.build
po/: POTFILES.in  ar.po  be.po  com.github.akiraux.akira.pot  cs.po  de.po  es.po  fr.po  is.po  ko.po  lt.po  lv.po  meson.build  nl.po  pl.po  pt_BR.po  ro.po  sl.po  tr.po  zh_CN.po
po/extra/: POTFILES.in  ar.po  be.po  cs.po  de.po  es.po  extra.pot  fr_CA.po  he.po  ja.po  lt.po  lv.po  meson.build  nl.po  pl.po  pt_BR.po  ro.po  sl.po  sn.po  zh_CN.po
src/: meson.build
src/Layouts/: LeftSideBar.vala  MainCanvas.vala
src/Layouts/Partials/: BorderItem.vala  FillItem.vala  GridItem.vala  GridsPanel.vala
src/Lib/: Canvas.vala
src/Lib/Managers/: ItemsManager.vala
src/Lib/Models/: CanvasArtboard.vala  CanvasEllipse.vala  CanvasImage.vala  CanvasItem.vala  CanvasRect.vala  CanvasText.vala
src/Models/: GridsItemModel.vala
src/Partials/: ZoomButton.vala
